ws_ros2_opencv/log/build_2024-11-04_15-05-46/ros2_opencv/stderr.log
  File "/home/epue/capstone.git/capstone/ws_ros2_opencv/install/ros2_opencv/lib/python3.10/site-packages/ros2_opencv/road_detect.py", line 59
    cv2.imwrite('canny.jpg', cannied_image)
    ^^^
SyntaxError: invalid syntax

